--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,16 @@ repositories {
 dependencies {
 
     compile "org.jsoup:jsoup:$jsoup_version"
+    compile "org.fusesource.jansi:jansi:$jansi_version"
     compile "org.xerial:sqlite-jdbc:$sqlite_version"
     compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
     compile "com.github.kittinunf.fuel:fuel:$fuel_version"
     compile "com.beust:klaxon:$klaxon_version"
+
+    compile "me.liuwj.ktorm:ktorm-core:$ktorm_version"
     
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
